RESOLVED FIXED271728
[JSC] Redefinitions of RELEASE_ASSERT should be removed
https://bugs.webkit.org/show_bug.cgi?id=271728
Summary [JSC] Redefinitions of RELEASE_ASSERT should be removed
David Degazio
Reported 2024-03-26 14:13:02 PDT
In: - AirAllocateRegistersAndStackByLinearScan.cpp - DFGSSAConversionPhase.cpp - FTLLowerDFGToB3.cpp ...we redefine the RELEASE_ASSERT macro with pretty much the same implementation, minus the UNLIKELY(...) around the condition and the WTF::isIntegralOrPointerType(...) check. As far as I can tell there's no special reason we need to remove either of these things in these files, so probably we should just use the base RELEASE_ASSERT definition and reduce code duplication.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-26 14:13:12 PDT
David Degazio
Comment 2 2024-03-26 15:15:13 PDT
EWS
Comment 3 2024-04-01 09:14:18 PDT
Committed 276882@main (f62faaf4e133): <https://commits.webkit.org/276882@main> Reviewed commits have been landed. Closing PR #26485 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.