[JSC] Redefinitions of RELEASE_ASSERT should be removed https://bugs.webkit.org/show_bug.cgi?id=271728 rdar://problem/125439450

Reviewed by Yusuke Suzuki.

Removes several redefinitions of the RELEASE_ASSERT macro
in JavaScriptCore, since they don't seem to serve any purpose
other than duplicating code needlessly.

* Source/JavaScriptCore/b3/air/AirAllocateRegistersAndStackByLinearScan.cpp:
* Source/JavaScriptCore/dfg/DFGSSAConversionPhase.cpp:
* Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:

Canonical link: https://commits.webkit.org/276882@main